test/expected/type_builtin_1.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "type" "echo"]
  [CompoundListCondition, None]
    [SimpleCommand "type" "-a" "cd"]
  [CompoundListCondition, None]
    [SimpleCommand "type" "nope"]
[Word
  Unquoted "type"
]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "type"
]
[Word
  Unquoted "-a"
]
[Word
  Unquoted "cd"
]
[Word
  Unquoted "type"
]
[Word
  Unquoted "nope"
]
echo is a shell builtin
cd is a shell builtin
cd is /usr/bin/cd
shit: 4:1: error: Builtin 'type': The command 'nope' was not found.
     4 |  type nope
       |  ^~~~~~~~~ here.
[Code 1]
